--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+  --light-gray: hsla(227, 10%, 46%, 0.158);
+  --dark-gray: hsl(0, 0%, 59%);
+  --dark-cyan: hsl(185, 75%, 39%);
+  --dark-blue: hsl(229, 23%, 23%);
+}
+
 *,
 *::before,
 *::after {
@@ -7,13 +14,97 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   height: 100vh;
-  background-color: hsl(185, 75%, 39%);
+
+  background-color: var(--dark-cyan);
   background-image: url(images/bg-pattern-top.svg),
     url(images/bg-pattern-bottom.svg);
   background-size: 150%, 150%;
   background-repeat: no-repeat, no-repeat;
   background-position: -93vw -47vh, 45vw 55vh;
+
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
+  color: var(--dark-blue);
+}
+
+/*==========
+    card
+==========*/
+.profile-card {
+  border-radius: 15px;
+  background-color: #fff;
+  background-image: url(images/bg-pattern-card.svg);
+  background-size: 100% 37.5%;
+  background-repeat: no-repeat;
+
+  width: min(87%, 22rem);
+  height: min-content;
+}
+
+.profile__bio {
+  height: 18rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid var(--light-gray);
+}
+
+.profile__img {
+  border-radius: 100px;
+  border: 0.33em solid #fff;
+  margin-top: 3.5rem;
+  margin-bottom: 0.8em;
+  box-shadow: inset 0 0 0 10px #fff;
+}
+
+.profile__name,
+.stat__line {
+  font-size: 1.1rem;
+  font-weight: 600;
+  letter-spacing: 0.75px;
+  margin-bottom: 0.5em;
+}
+
+.profile__age {
+  margin-left: 0.3rem;
+}
+
+.profile__location {
+  font-size: 0.95rem;
+}
+
+.profile__age,
+.profile__location,
+.stat__title {
+  color: var(--dark-gray);
+  font-family: 'Kumbh Sans', sans-serif;
+  font-weight: 300;
+}
+
+.profile__stats {
+  height: 5.315rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 1em;
+}
+
+.stat__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.stat__title {
+  font-size: 0.65rem;
+  letter-spacing: 1px;
+  margin-top: -0.45em;
 }
 
 /*=================
@@ -28,4 +119,11 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 600px) {
+  body {
+    background-size: 75%, 75%;
+    background-position: -24rem -36rem, 45vw 55vh;
+  }
 }
