--- a/style.css
+++ b/style.css
@@ -14,12 +14,6 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  height: 100vh;
-
   background-color: var(--dark-cyan);
   background-image: url(images/bg-pattern-top.svg),
     url(images/bg-pattern-bottom.svg);
@@ -27,20 +21,28 @@ body {
   background-repeat: no-repeat, no-repeat;
   background-position: -93vw -47vh, 45vw 55vh;
 
+  height: 100vh;
+
   font-family: 'Lato', sans-serif;
   font-size: 18px;
   color: var(--dark-blue);
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*==========
     card
 ==========*/
 .profile-card {
-  border-radius: 15px;
   background-color: #fff;
   background-image: url(images/bg-pattern-card.svg);
   background-size: 100% 37.5%;
   background-repeat: no-repeat;
+  border-radius: 15px;
 
   width: min(87%, 22rem);
   height: min-content;
@@ -48,10 +50,7 @@ body {
 
 .profile__bio {
   height: 18rem;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   border-bottom: 1px solid var(--light-gray);
 }
 
@@ -87,6 +86,10 @@ body {
   font-weight: 300;
 }
 
+/*===========
+    stats
+===========*/
+
 .profile__stats {
   height: 5.315rem;
   display: grid;
@@ -95,10 +98,7 @@ body {
 }
 
 .stat__item {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .stat__title {
